--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -216,6 +216,21 @@
   @apply mx-auto px-4;
 }
 
+/* Override container padding for mobile nav menu - must stretch edge-to-edge */
+@media (max-width: 1023px) {
+  /* Remove container padding only for the header when mobile nav is used */
+  header.header > .container {
+    padding-inline: 0 !important;
+  }
+
+  /* Ensure nav UL itself also ignores container padding */
+  #nav-menu.navbar,
+  .navbar#nav-menu {
+    padding-inline: 0 !important;
+    margin-inline: 0 !important;
+  }
+}
+
 /* Fit To Screen (Prevent Screen Flash ) */
 .fit-to-screen {
   @apply flex min-h-[102vh] flex-col justify-start;
