--- a/src/layouts/components/sections/OurValue.astro
+++ b/src/layouts/components/sections/OurValue.astro
@@ -10,9 +10,9 @@ type ourValueSectionType = Section & {
   list: {
     title: string;
     description: string;
-    icon?: string,
+    icon?: string;
   }[];
-  fineprint?: string,
+  fineprint?: string;
 };
 
 type Props = {
