--- a/src/layouts/components/sections/HomeBanner.astro
+++ b/src/layouts/components/sections/HomeBanner.astro
@@ -23,7 +23,8 @@ let actualContent = overrideObjects(
   Astro.props.content,
 ) as homeBannerSectionType;
 
-let { title, subtitle, description, button } = actualContent as homeBannerSectionType;
+let { title, subtitle, description, button } =
+  actualContent as homeBannerSectionType;
 
 const background = "/images/hero/background.jpg";
 ---
@@ -35,7 +36,7 @@ const background = "/images/hero/background.jpg";
         {
           title && (
             <AnimatedText
-              class="font-secondary mb-6 text-center text-5xl capitalize md:text-7xl/tight gold-text"
+              class="font-hero gold-text mb-6 text-center text-5xl tracking-[0.17em] capitalize md:text-7xl/tight"
               content={markdownify(title)}
             />
           )
@@ -64,13 +65,7 @@ const background = "/images/hero/background.jpg";
         data-aos-delay="400"
         data-aos-duration="900"
         class="flex flex-wrap items-center justify-center gap-5">
-        {
-          button && (
-            <ButtonLink
-              content={button}
-              class="btn-primary" />
-          )
-        }
+        {button && <ButtonLink content={button} class="btn-primary" />}
       </div>
     </div>
   </div>
