--- a/src/layouts/components/sections/PricingSection.astro
+++ b/src/layouts/components/sections/PricingSection.astro
@@ -17,6 +17,17 @@ const { title, subtitle, plans, list, heading, description, ai_automations } =
 ---
 
 <section id="pricing" class="relative">
+  <!-- background glows -->
+  <div aria-hidden class="pointer-events-none absolute inset-0">
+    <div
+      class="absolute -top-40 left-1/2 h-[600px] w-[800px] -translate-x-1/2 rounded-full bg-emerald-500/20 blur-[120px]">
+    </div>
+
+    <div
+      class="absolute right-[-200px] bottom-0 h-[500px] w-[500px] rounded-full bg-teal-400/20 blur-[120px]">
+    </div>
+  </div>
+
   <div class="container space-y-12 md:space-y-16">
     <!-- Title & Subtitle -->
     <div class="mx-auto max-w-2xl space-y-5 text-center">
