--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,5 +1,6 @@
 .hero-bg {
-  background-image: url("/images/hero/background.jpg");
+  position: relative;
+  background-color: #011b22;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -13,11 +14,6 @@
 }
 
 /* Browsers that support WebP will use this instead */
-@supports (background-image: url("/images/hero/background.webp")) {
-  .hero-bg {
-    background-image: url("/images/hero/background.webp");
-  }
-}
 
 .gold-text,
 .gold-text * {
