--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -11,6 +11,9 @@
   --color-body: #0e0c0c;
   --color-border-light: #242222;
   --color-theme-dark: #1A191C;
+  --color-monire-teal: 0 59 75;
+  --color-monire-nav: 26 54 60;
+
   
   --color-text-default: #C8C1C1;
   --color-dark: #000E30;
