--- a/src/layouts/components/global/header/MenuItem.astro
+++ b/src/layouts/components/global/header/MenuItem.astro
@@ -10,7 +10,10 @@ const { pathname } = Astro.url;
     <li class="nav-item" role="menuitem">
       <a
         href={menu.action ? "#" : menu.url || "#"}
-        class:list={["nav-link", { "nav-link-active": pathname === menu.url }]}
+        class:list={[
+          "nav-link btn text-text-default font-bold uppercase",
+          { "nav-link-active": pathname === menu.url },
+        ]}
         data-menu-action={menu.action || null}>
         {menu.name}
       </a>
@@ -54,6 +57,10 @@ const { pathname } = Astro.url;
 
       links.forEach((link) => {
         const a = link as HTMLAnchorElement;
+        if (a.dataset.menuAction) {
+          link.classList.remove("nav-link-active");
+          return;
+        }
         const linkPath = a.pathname;
         const linkHash = a.hash;
 
