--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,6 +7,25 @@ html {
   /* Lining and tabular numbers */
 }
 
+@font-face {
+  font-family: "Degular";
+  src: local("Degular");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  ascent-override: 92%;
+  descent-override: 8%;
+  line-gap-override: 0%;
+}
+
+@font-face {
+  font-family: "Craftwork Grotesk";
+  src: url("../assets/fonts/CraftworkGrotesk.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   @apply bg-body font-primary text-text-default leading-normal font-normal;
 }
@@ -43,6 +62,12 @@ h6 {
   br {
     @apply max-md:hidden;
   }
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Craftwork Grotesk", var(--font-secondary), serif;
 }
 
 h1,
