--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -11,6 +11,7 @@
   min-height: calc(100vh + 80px);
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 /* Browsers that support WebP will use this instead */
